<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:context=".ui.fragments.uploadnewproductfragment.UploadNewProductFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_top_radius_layout_background"
            android:paddingHorizontal="20dp"
            android:paddingVertical="38dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/headingTextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/add_new_product_fragment_title"
                android:textAlignment="center"
                android:textColor="@color/text_on_white_variant_2"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/captionTextLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/add_new_product_page_caption"
                android:textAlignment="center"
                android:textColor="@color/text_on_white_variant_0"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headingTextLabel">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productNameTextInputLayout"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/product_name_label"
                android:textAlignment="center"
                android:textColor="@color/text_on_white_variant_2"
                android:textSize="16sp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                android:textColorHint="@color/black"
                app:errorIconTint="@color/input_layout_error_icon_color"
                app:errorTextColor="@color/input_layout_error_text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/captionTextLabel">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productNameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/text_on_white_variant_1">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centreGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productPriceTextInputLayout"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/price_label"
                android:longClickable="false"
                android:textAlignment="center"
                android:textColor="@color/text_on_white_variant_1"
                android:textSize="16sp"
                app:boxBackgroundColor="@color/input_layout_background"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:errorIconTint="@color/input_layout_error_icon_color"
                app:errorTextColor="@color/input_layout_error_text_color"
                android:textColorHint="@color/black"
                app:hintAnimationEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/centreGuideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productNameTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productPriceTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:longClickable="false"
                    android:textColor="@color/text_on_white_variant_1">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productTaxTextInputLayout"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/tax_amount_label"
                android:longClickable="false"
                android:textAlignment="center"
                android:textColor="@color/text_on_white_variant_2"
                android:textSize="16sp"
                app:boxBackgroundColor="@color/input_layout_background"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeWidth="0dp"
                app:errorIconTint="@color/input_layout_error_icon_color"
                app:errorTextColor="@color/input_layout_error_text_color"
                app:hintAnimationEnabled="true"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/centreGuideline"
                app:layout_constraintTop_toBottomOf="@id/productNameTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productTaxTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:longClickable="false"
                    android:textColor="@color/text_on_white_variant_1">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productTypeDropDownMenu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/product_category_label"
                app:boxBackgroundColor="@color/input_layout_background"
                app:boxStrokeWidth="0dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:endIconTint="@color/black"
                app:errorIconTint="@color/input_layout_error_icon_color"
                app:errorTextColor="@color/input_layout_error_text_color"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productPriceTextInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/productTypeAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textColor="@color/text_on_white_variant_1"
                    android:textColorHint="@color/text_on_white_variant_1"
                    android:fontFamily="@font/montserrat"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/uploadProductImageTextViewLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/stroked_text_view_background"
                android:clickable="true"
                android:drawableStart="@drawable/upload"
                android:drawablePadding="20dp"
                android:focusable="true"
                app:errorIconTint="@color/input_layout_error_icon_color"
                app:errorTextColor="@color/input_layout_error_text_color"
                android:fontFamily="@font/montserrat"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingHorizontal="20dp"
                android:paddingVertical="20dp"
                android:text="@string/upload_image_label"
                android:textColor="@color/text_on_white_variant_1"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productTypeDropDownMenu">

            </com.google.android.material.textview.MaterialTextView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/quarterGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <ImageButton
                android:id="@+id/cancelButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/outline_view_background"
                android:src="@drawable/cross_icon"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="@id/uploadProductButton"
                app:layout_constraintEnd_toStartOf="@id/quarterGuideline"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/uploadProductButton"
                app:strokeColor="@color/button_stroke_color"
                app:strokeWidth="1dp">

            </ImageButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadProductButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/upload_label"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/quarterGuideline"
                app:layout_constraintTop_toBottomOf="@id/uploadProductImageTextViewLabel">

            </com.google.android.material.button.MaterialButton>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>